chore: adjust util and update docs
