# docs/swagger/swagger.yaml
@@ -9,80 +9,54 @@ definitions:
       message:
         type: string
     type: object
+  model.UserInfo:
+    properties:
+      createdAt:
+        example: "2020-03-23 20:00:00"
+        type: string
+      id:
+        example: 1
+        type: integer
+      password:
+        example: 9dXd13#k$1123!kln
+        type: string
+      updatedAt:
+        example: "2020-03-23 20:00:00"
+        type: string
+      username:
+        example: 张三
+        type: string
+    type: object
   model.UserModel:
     properties:
+      avatar:
+        type: string
+      last_login_ip:
+        type: string
+      last_login_time:
+        type: string
       password:
         type: string
+      phone:
+        type: integer
+      sex:
+        type: integer
       username:
         type: string
     required:
-    - username
     - password
-    type: object
-  user.CreateRequest:
-    properties:
-      password:
-        type: string
-      username:
-        type: string
-    type: object
-  user.CreateResponse:
-    properties:
-      username:
-        type: string
-    type: object
-  user.ListRequest:
-    properties:
-      limit:
-        type: integer
-      offset:
-        type: integer
-      username:
-        type: string
-    type: object
-  user.SwaggerListResponse:
-    properties:
-      totalCount:
-        type: integer
-      userList:
-        items:
-          type: '&{model UserInfo}'
-        type: array
+    - username
     type: object
 host: localhost:8080
 info:
   contact:
-    email: 466701708@qq.com
-    name: lkong
+    name: 1024casts/snake
     url: http://www.swagger.io/support
-  description: apiserver demo
+  description: snake demo
   license: {}
-  title: Apiserver Example API
+  title: snake Example API
   version: "1.0"
 paths:
-  /login:
-    post:
-      parameters:
-      - description: Username
-        in: body
-        name: username
-        required: true
-        schema:
-          type: object
-      - description: Password
-        in: body
-        name: password
-        required: true
-        schema:
-          type: object
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"code":0,"message":"OK","data":{"token":"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE1MjgwMTY5MjIsImlkIjowLCJuYmYiOjE1MjgwMTY5MjIsInVzZXJuYW1lIjoiYWRtaW4ifQ.LjxrK9DuAwAzUD8-9v43NzWBN7HXsSLfebw92DKd1JQ"}}'
-          schema:
-            type: string
-      summary: Login generates the authentication token
   /sd/cpu:
     get:
       consumes:
@@ -143,55 +117,6 @@ paths:
       summary: Checks the ram usage
       tags:
       - sd
-  /user:
-    get:
-      consumes:
-      - application/json
-      description: List users
-      parameters:
-      - description: List users
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/user.ListRequest'
-          type: object
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"code":0,"message":"OK","data":{"totalCount":1,"userList":[{"id":0,"username":"admin","random":"user
-            ''admin'' get random string ''EnqntiSig''","password":"$2a$10$veGcArz47VGj7l9xN7g2iuT9TF21jLI1YGXarGzvARNdnt4inC9PG","createdAt":"2018-05-28
-            00:25:33","updatedAt":"2018-05-28 00:25:33"}]}}'
-          schema:
-            $ref: '#/definitions/user.SwaggerListResponse'
-            type: object
-      summary: List the users in the database
-      tags:
-      - user
-    post:
-      consumes:
-      - application/json
-      description: Add a new user
-      parameters:
-      - description: Create a new user
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/user.CreateRequest'
-          type: object
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"code":0,"message":"OK","data":{"username":"kong"}}'
-          schema:
-            $ref: '#/definitions/user.CreateResponse'
-            type: object
-      summary: Add new user to the database
-      tags:
-      - user
   /user/{id}:
     delete:
       consumes:
@@ -213,7 +138,7 @@ paths:
             type: object
       summary: Delete an user by the user identifier
       tags:
-      - user
+      - 用户
     put:
       consumes:
       - application/json
@@ -241,27 +166,90 @@ paths:
             type: object
       summary: Update a user info by the user identifier
       tags:
-      - user
-  /user/{username}:
+      - 用户
+  /users/login:
+    post:
+      description: 仅限手机登录
+      parameters:
+      - description: 登录信息
+        in: body
+        name: req
+        required: true
+        schema:
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":0,"message":"OK","data":{"token":"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE1MjgwMTY5MjIsImlkIjowLCJuYmYiOjE1MjgwMTY5MjIsInVzZXJuYW1lIjoiYWRtaW4ifQ.LjxrK9DuAwAzUD8-9v43NzWBN7HXsSLfebw92DKd1JQ"}}'
+          schema:
+            type: string
+      summary: 用户登录接口 Done
+      tags:
+      - 用户
+  /users/me:
     get:
       consumes:
       - application/json
-      description: Get an user by username
+      description: Get an user by user id
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 个人用户信息
+          schema:
+            $ref: '#/definitions/model.UserInfo'
+            type: object
+      summary: 获取自己的个人信息 Done
+      tags:
+      - 用户
+  /users/profile:
+    get:
+      consumes:
+      - application/json
+      description: Get an user by user id
       parameters:
-      - description: Username
-        in: path
-        name: username
+      - description: 用户id
+        in: query
+        name: id
         required: true
         type: string
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":0,"message":"OK","data":{"username":"kong","password":"$2a$10$E0kwtmtLZbwW/bDQ8qI8e.eHPqhQOW9tvjwpyo/p05f/f4Qvr3OmS"}}'
+          description: 用户信息
           schema:
-            $ref: '#/definitions/model.UserModel'
+            $ref: '#/definitions/model.UserInfo'
             type: object
-      summary: Get an user by the user identifier
+      summary: 通过用户id获取用户信息 Done
       tags:
-      - user
+      - 用户
+  /users/vcode:
+    get:
+      consumes:
+      - application/json
+      description: Get an user by username
+      parameters:
+      - description: 区域码，比如86
+        in: query
+        name: area_code
+        required: true
+        type: string
+      - description: 手机号
+        in: query
+        name: phone
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.Response'
+            type: object
+      summary: 根据手机号获取校验码 Done
+      tags:
+      - 用户
 swagger: "2.0"
